--- a/Documentación/7. Codext - Gramática libre de contexto (3).md
+++ b/Documentación/7. Codext - Gramática libre de contexto (3).md
@@ -6,7 +6,8 @@ Emmanuel Villanueva Rivera
 ## Instrucciones de palabras reservadas (3)
 Instrucción 13: LOGIC 
 ``` 
-S -> PR13 ce07 ARGS131 ce05 ARGS132 ce05 ARGS132 ce08
+S -> COND
+COND -> PR13 ce07 ARGS131 ce05 ARGS132 ce05 ARGS132 ce08
 ARGS131 -> OPRE | OPRL
 ARGS132 -> PR13 | PR16 | IDXX | CNXX | cade
 ```
@@ -14,7 +15,7 @@ ARGS132 -> PR13 | PR16 | IDXX | CNXX | cade
 Instrucción 14: REPEAT
 ````
 S -> PR13 PR03 ARGS14 PR04 PR15
-ARGS14 -> PRXX | come
+ARGS14 -> INST | come
 ````
 
 Instrucción 15: TIL  
